--- a/src/app/components/dialogs/confirm-delete-movie/confirm-delete-movie.component.html
+++ b/src/app/components/dialogs/confirm-delete-movie/confirm-delete-movie.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 mat-dialog-title>Atenção <span>!</span></h1>
   <div mat-dialog-content>
-    <p>Quer mesmo deletar este filme?</p>
+    <p>Quer mesmo deletar este {{ data.text }}?</p>
   </div>
   <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Não</button>
