Adicionado integracao com login e authguard

--- a/src/app/pages/admin/employees/employees.component.html
+++ b/src/app/pages/admin/employees/employees.component.html
@@ -4,10 +4,10 @@
     <div class="header">
       <div>
         <app-btn-open-aside (openedAside)="handleOpenAside()"></app-btn-open-aside>
-        <h2>Filmes</h2>
+        <h2>Funcionarios</h2>
       </div>
       <button type="button" routerLink="/admin/employee/create">
-        Adicionar filme
+        Adicionar funcionarios
       </button>
     </div>
     <div class="data">
