--- a/src/app/pages/admin/employee-create/employee-create.component.html
+++ b/src/app/pages/admin/employee-create/employee-create.component.html
@@ -4,7 +4,7 @@
     <div class="header">
       <div>
         <app-btn-open-aside (openedAside)="handleOpenAside()"></app-btn-open-aside>
-        <h2>Filmes / adicionar filme</h2>
+        <h2>Funcionarios/ adicionar funcionario</h2>
       </div>
     </div>
     <form (ngSubmit)="onSubmit()">
