--- a/src/app/pages/admin/login-admin/login-admin.component.html
+++ b/src/app/pages/admin/login-admin/login-admin.component.html
@@ -1,13 +1,21 @@
 <div class="container">
-  <form>
+  <form (ngSubmit)="onSubmit(form)" #form="ngForm">
     <div class="logo">
       <p>CineLumin</p>
       <img src="../../../../assets/icons/light.png" alt="lampada vermelha fazendo papel de letra no logotipo"
         title="lampada vermelha fazendo papel de letra no logotipo">
     </div>
-    <input type="text" placeholder="Nº da ID">
-    <input type="password" placeholder="Senha">
+    
+    <input type="text" placeholder="Nome de usuário" [(ngModel)]="login.username" name="username" required>
+    <div *ngIf="form.controls['username'].invalid && (form.controls['username'].dirty || form.controls['username'].touched)">
+      <p class="error-message">O campo Nome de usuário é obrigatório.</p>
+    </div>
+
+    <input type="password" placeholder="Senha" [(ngModel)]="login.senha" name="senha" required>
+    <div *ngIf="form.controls['senha'].invalid && (form.controls['senha'].dirty || form.controls['senha'].touched)">
+      <p class="error-message">O campo Senha é obrigatório.</p>
+    </div>
+
     <button type="submit">Entrar</button>
     <p class="forgot_password">Esqueceu a senha? <a routerLink="/forgot-password">Clique Aqui</a></p>
   </form>
-</div>
