--- a/src/app/components/aside-nav/aside-nav.component.css
+++ b/src/app/components/aside-nav/aside-nav.component.css
@@ -156,7 +156,7 @@ aside .flex .admin_profile .info .name {
   font-weight: 500;
 }
 
-aside .flex .admin_profile .info .email {
+aside .flex .admin_profile .info .username {
   color: var(--grey);
   font-size: 12px;
   margin-top: 3px;
