feat: add dashboard

--- a/src/app/components/aside-nav/aside-nav.component.html
+++ b/src/app/components/aside-nav/aside-nav.component.html
@@ -11,7 +11,7 @@
     <div class="flex">
       <nav>
         <ul>
-          <a [routerLinkActive]="'active'">
+          <a [routerLinkActive]="'active'" [routerLink]="['/admin/dashboard']">
             <img src="../../../assets/icons/house.png" alt="icone de casa" title="casa" />
             <li>Início</li>
           </a>
