--- a/src/app/pages/admin/specify-session/specify-session.component.html
+++ b/src/app/pages/admin/specify-session/specify-session.component.html
@@ -8,9 +8,9 @@
       </div>
     </div>
     <div class="info_card_row">
-      <app-card-info-specify-session [card]="cardsInfoSpecifySession[0]"></app-card-info-specify-session>
-      <app-card-info-specify-session [card]="cardsInfoSpecifySession[1]"></app-card-info-specify-session>
-      <app-card-info-specify-session [card]="cardsInfoSpecifySession[2]"></app-card-info-specify-session>
+      <app-card-info-specify [card]="cardsInfoSpecify[0]"></app-card-info-specify>
+      <app-card-info-specify [card]="cardsInfoSpecify[1]"></app-card-info-specify>
+      <app-card-info-specify [card]="cardsInfoSpecify[2]"></app-card-info-specify>
     </div>
     <div class="room">
       <h3>Assentos:</h3>
