--- a/src/app/pages/admin/employee-create/employee-create.component.css
+++ b/src/app/pages/admin/employee-create/employee-create.component.css
@@ -213,3 +213,19 @@
     width: 100%;
   }
 }
+
+.disabled-button {
+  cursor: not-allowed;
+  background-color: #ccc;
+  color: #888;
+}
+
+.error-message {
+  color: red;
+  font-size: 16px;
+  margin-top: 5px;
+}
+
+.error-input {
+  border: 1px solid red;
+}
