--- a/src/app/pages/admin/employees/employees.component.html
+++ b/src/app/pages/admin/employees/employees.component.html
@@ -16,25 +16,25 @@
           <th>#</th>
           <th>Nome</th>
           <th>Cpf</th>
-          <th>Telefone</th>
+          <th>Usuário</th>
           <th>Autorizacao</th>
           <th>Cargo</th>
           <th>Ações</th>
         </tr>
-        <tr *ngFor="let employee of displayedItems">
-          <td>{{ employee.id }}</td>
-          <td>{{ employee.nome }}</td>
-          <td>{{ employee.cpf }}</td>
-          <td>{{ employee.telefone }}</td>
-          <td>{{ employee.tipoAutorizacao }}</td>
-          <td>{{ employee.cargo }}</td>
+        <tr *ngFor="let funcionario of funcionarios.content">
+          <td>{{ funcionario.id }}</td>
+          <td>{{ funcionario.nome }}</td>
+          <td>{{ funcionario.documento }}</td>
+          <td>{{ funcionario.username }}</td>
+          <td>{{ funcionario.tipoAutorizacao }}</td>
+          <td>{{ funcionario.cargo }}</td>
           <td>
             <button type="button">
               <mat-icon [ngStyle]="{'color': 'var(--green)'}">edit</mat-icon>
             </button>
             <button type="button">
               <mat-icon [ngStyle]="{'color': 'var(--principal_red)'}"
-                (click)="openDialog(employee.id)">restore_from_trash</mat-icon>
+                (click)="openDialog(funcionario.id)">restore_from_trash</mat-icon>
             </button>
           </td>
         </tr>
@@ -44,6 +44,6 @@
       <button (click)="previousPage()" [disabled]="currentPage === 1">Anterior</button>
       <p>{{ currentPage }} de {{ totalPages }}</p>
       <button (click)="nextPage()" [disabled]="currentPage === totalPages">Próxima</button>
-    </div>
+    </div>    
   </main>
 </div>
