--- a/src/app/pages/logout-confirmation/logout.html
+++ b/src/app/pages/logout-confirmation/logout.html
@@ -1,4 +1,9 @@
-<h1>Confirmação de Logout</h1>
-<p>Tem certeza de que deseja sair?</p>
-<button (click)="confirmLogout()">Sim, sair</button>
-<button (click)="cancelLogout()">Cancelar</button>
+<div class="confirmation-dialog">
+    <h1>Confirmação de Logout</h1>
+    <p>Tem certeza de que deseja sair?</p>
+    <div class="button-container">
+      <button class="confirm-button" (click)="confirmLogout()">Sim, sair</button>
+      <button class="cancel-button" (click)="cancelLogout()">Cancelar</button>
+    </div>
+  </div>
+  
