--- a/src/app/pages/user/auth/register/register.component.html
+++ b/src/app/pages/user/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <form (ngSubmit)="onSubmit()">
     <div class="logo">
       <p>CineLumin</p>
@@ -14,4 +14,4 @@
     <button type="submit">Entrar</button>
     <p class="forgot_password">Já tem uma conta? <a routerLink="/login">Entrar</a></p>
   </form>
-</div>
+</div> -->
