Ajuste tela filme

--- a/src/app/pages/admin/movies/movies.component.html
+++ b/src/app/pages/admin/movies/movies.component.html
@@ -20,6 +20,7 @@
           <th>#</th>
           <th>Poster</th> <!-- Adicionada a coluna para a URL da imagem -->
           <th>Título</th>
+          <th>Gênero</th>
           <th>Descrição</th>
           <th>Status</th>
           <th>Duração</th>
