--- a/src/app/components/session-item/session-item.component.html
+++ b/src/app/components/session-item/session-item.component.html
@@ -1,11 +1,11 @@
 <div class="session_item" (click)="redirectToSpecifySession()">
   <div class="icon_container">
     <div class="border_icon">
-      <img src="../../assets/icons/movie_item.png" alt="icon de um filme" title="filme item">
+      <img src="../../assets/icons/movie_item.png" alt="icon de um filme" title="filme item" />
     </div>
   </div>
   <div class="session_content">
     <p class="title">{{ session?.title }}</p>
-    <p class="room">{{ session?.room }}</p>
+    <p class="room">Sala: {{ session?.room }}</p>
   </div>
 </div>
