Ajustes na tela de filmes

--- a/src/app/components/aside-nav/aside-nav.component.css
+++ b/src/app/components/aside-nav/aside-nav.component.css
@@ -162,6 +162,10 @@ aside .flex .admin_profile .info .username {
   margin-top: 3px;
 }
 
+.click{
+  cursor: pointer;
+}
+
 /* MOBILE */
 @media(max-width: 800px) {
 
