--- a/src/app/pages/admin/employees/employees.component.html
+++ b/src/app/pages/admin/employees/employees.component.html
@@ -24,9 +24,9 @@
         <tr>
           <th>#</th>
           <th>Nome</th>
-          <th>Cpf</th>
+          <th>CPF</th>
           <th>Usuário</th>
-          <th>Autorizacao</th>
+          <th>Autorização</th>
           <th>Cargo</th>
           <th>Ações</th>
         </tr>
